--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE.HTML>
     <head>
         <html lang="eng">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
           <meta charset="utf-8"/>
           <meta name="description"content="Miranda Priestly services can change your life foverer">
           <meta name="author" content="Miranda Priestly">
